# zk-hm

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  prover.c  prover_message_eq.c  verifier.c  verifier_eq.c
MPC_INNER_PROD/: MPC_inner_prod.c  MPC_inner_prod.h  test_hm_commit.c
MPC_SHA256/: .gitignore  MPC_SHA256.c  MPC_SHA256.h  MPC_SHA256_VERIFIER.c  MPC_SHA256_VERIFIER.h  Makefile  main.c  prover.c  prover_message_eq.c  shared.c  shared.h  verifier.c
examples/: CMakeLists.txt  bit_commit.c  bit_commit.cpp
include/: hm.h
src/: CMakeLists.txt  hm_buffer.c  hm_buffer.h  hm_impl.c  mpc_arithmetic.c  mpc_arithmetic.h  mpc_core_funcs.h  mpc_halevi_micali.c  mpc_halevi_micali.h  mpc_sha256.h  mpc_sha256_prover.c  mpc_sha256_verifier.c  mpc_universal_hash.c  mpc_universal_hash.h  prg.c  prg.h  prover.c  random_oracle.c  random_oracle.h  shared.h  thread_state.c  thread_state.h  utils.h  verifier.c  verifier_eq.c
src/mpc_core/: MPC_arithmetic.c  MPC_arithmetic.h  shared.c  shared.h
src/mpc_inner_prod/: MPC_inner_prod.c  MPC_inner_prod.h
src/mpc_sha256/: MPC_SHA256.c  MPC_SHA256.h  MPC_SHA256_VERIFIER.c  MPC_SHA256_VERIFIER.h
src/mpc_universal_hash/: MPC_universal_hash.c  MPC_universal_hash.h
src/utils/: crypto.c  crypto.h
tests/: CMakeLists.txt  test_hm_commit.c  test_hm_commit.cpp  test_mpc_sha256.c  test_mpc_sha256.cpp
